<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.natsu.myapplication.ThirdActivity"
    android:background="#ff9bdcee">

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/fragment_container2"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_above="@+id/fragment_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/fragment_container3"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_above="@+id/fragment_container2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/set"
        android:id="@+id/button5"
        android:onClick="onBut1Click"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/set"
        android:id="@+id/button6"
        android:onClick="onBut2Click"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/set"
        android:id="@+id/button7"
        android:layout_below="@+id/button6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onBut3Click" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFragmentOne"
        android:layout_above="@+id/button6"
        android:inputType="text"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFragmentTwo"
        android:layout_above="@+id/button7"
        android:inputType="text"
        android:layout_alignRight="@+id/editTextFragmentOne"
        android:layout_alignEnd="@+id/editTextFragmentOne"
        android:layout_alignLeft="@+id/editTextFragmentOne"
        android:layout_alignStart="@+id/editTextFragmentOne" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFragmentThree"
        android:inputType="text"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:layout_below="@+id/button6"
        android:layout_alignBottom="@+id/button7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_one"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/editTextFragmentOne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/frag_input_title"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_two"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/editTextFragmentTwo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_three"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/editTextFragmentThree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <!--
        <fragment
            android:name="com.example.natsu.myapplication.FragmentOne"
            android:id="@+id/fragment"
            android:layout_height="150dp"
            android:layout_width="match_parent"
            tools:layout="@layout/fragment_one"/> -->
</RelativeLayout>
